# python-project-template

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pr-check.yml  pr-review.yml  python-ci.yml
tests/: test_hello.py
