[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "template project"
authors = ["Roman Pavelka <roman.pavelka.asi@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
flake8-bandit = "^2.1.2"
black = "^21.7b0"
safety = "^1.10.3"
pytest = "^6.2.4"
Sphinx = "^4.0.2"
pre-commit = "^2.13.0"
